v1.15/_sources/user_guide/debugging.rst.txt
Debugging
=========

.. currentmodule:: warp

Environment Diagnostics
-----------------------

:func:`wp.print_diagnostics() <warp.print_diagnostics>` prints a snapshot of the Warp build
and runtime environment (e.g., software versions, CUDA info, build flags, and device details)::

    python -c "import warp; warp.print_diagnostics()"

When `filing a bug report <https://github.com/NVIDIA/warp/issues>`_, please include this output
to help us reproduce your issue.

Printing Values
---------------

Often one of the best debugging methods is to simply print values from kernels. Warp supports printing all built-in
types using the :func:`print() <warp._src.lang.print>` function, e.g.:

.. testcode::

    v = wp.vec3(1.0, 2.0, 3.0)

    print(v)

.. testoutput::

    [1.0, 2.0, 3.0]

In addition, formatted C-style printing for *scalar types* is available through :func:`wp.printf() <warp._src.lang.printf>`, e.g.:

.. code-block:: python

    @wp.kernel
    def mykernel():
        x = 1.0
        i = 2

        wp.printf("A float value %f, an int value: %d\n", x, i)

Diagnostics and Logging
-----------------------

For complex applications, it can be difficult to understand the order-of-operations that lead to a bug. To help diagnose
these issues, Warp supports a simple option to print out all launches and arguments to the console::

    wp.config.print_launches = True

Log Level
^^^^^^^^^

Warp emits informational, warning, and error messages through its own logging
infrastructure. The verbosity is controlled by a single global threshold:

.. code-block:: python

    wp.config.log_level = wp.LOG_DEBUG    # most verbose: codegen details, module loads
    wp.config.log_level = wp.LOG_INFO     # default: init banner, compile timings
    wp.config.log_level = wp.LOG_WARNING  # warnings and errors only
    wp.config.log_level = wp.LOG_ERROR    # errors only

Messages below the threshold are suppressed. Errors always emit regardless of
the level.

At ``wp.LOG_DEBUG``, additional messages are printed to standard output
regarding program progress and code generation, such as when operations may be
non-differentiable.

.. note::
    The legacy ``wp.config.verbose`` and ``wp.config.quiet`` flags are
    deprecated. Migrate to ``wp.config.log_level``:

    - ``wp.config.verbose = True`` → ``wp.config.log_level = wp.LOG_DEBUG``
    - ``wp.config.quiet = True`` → ``wp.config.log_level = wp.LOG_WARNING``

    Reading or setting either deprecated flag emits a one-time
    ``DeprecationWarning``. During the deprecation window the flag is still
    honored alongside ``log_level``, so existing code keeps working. Remove the
    flag once your code sets ``log_level`` directly.

    ``wp.config.verbose_warnings`` is not deprecated. It is an orthogonal
    formatting flag that controls whether warning messages include the source
    location and has no ``log_level`` equivalent.

Verbose Warnings
^^^^^^^^^^^^^^^^

To include the source location in each ``Warp UserWarning`` message, enable::

    wp.config.verbose_warnings = True

This can be useful in identifying where a particular warning is being emitted from.

Custom Loggers
^^^^^^^^^^^^^^

By default Warp routes diagnostics through a built-in logger that writes
debug and info messages to ``sys.stdout``, errors to ``sys.stderr``, and
routes warnings through Python's :mod:`warnings` filter machinery so that
``-W`` flags and :func:`warnings.simplefilter` work as expected.

Frameworks that want to capture Warp's output can supply a custom logger.
:class:`wp.Logger <warp.Logger>` is a runtime-checkable :class:`~typing.Protocol`,
so any object with the four methods below works. There is no need to inherit
from a Warp base class; framework integrators typically wrap an existing
logger in a small adapter:

.. code-block:: python

    class MyLogger:
        def debug(self, message): ...
        def info(self, message): ...
        def warning(self, message, category=None, stacklevel=1): ...
        def error(self, message): ...

    wp.set_logger(MyLogger())

The ``warning`` method must accept the ``category`` and ``stacklevel`` keyword
arguments even if the adapter ignores them: the internal emitter passes them
by name, so an adapter without those parameters raises ``TypeError`` at the
first warning. The built-in default logger uses them to integrate with
Python's :mod:`warnings` filter machinery.

To forward Warp's diagnostics into an existing :mod:`logging` pipeline, wrap
:class:`logging.Logger` in a small adapter:

.. code-block:: python

    import logging
    import warp as wp

    app_logger = logging.getLogger("myapp.warp")

    class StdlibAdapter:
        def debug(self, message): app_logger.debug(message)
        def info(self, message): app_logger.info(message)
        def warning(self, message, category=None, stacklevel=1): app_logger.warning(message)
        def error(self, message): app_logger.error(message)

    wp.set_logger(StdlibAdapter())

This routes all of Warp's output through stdlib :mod:`logging` (and any
handlers, filters, or formatters configured on it). Note that this loses
the default logger's integration with Python's :mod:`warnings` filter
machinery (e.g. ``-W`` flags, :func:`warnings.filterwarnings`); the adapter
emits warnings as plain log records instead.

To temporarily install a logger, use :class:`wp.ScopedLogger <warp.ScopedLogger>`,
which restores the previous logger on context exit:

.. code-block:: python

    with wp.ScopedLogger(my_capture_logger):
        wp.launch(my_kernel, ...)  # diagnostics flow to my_capture_logger

Pass ``None`` to ``wp.set_logger()`` or ``wp.ScopedLogger()`` to restore
Warp's built-in default logger.

.. _debug-mode:

Debug Mode Compilation
----------------------

In debug mode, Warp kernels will perform the following additional checks:

* Raise an assertion if there is an array access outside the defined shape.
* Warn if :func:`wp.tid() <warp.tid>` will return an overflowed value on large grids.
* (GPU-only) Warn if the CUDA grid dimensions have been capped due to an overflowed number of blocks.
* (GPU-only) Generate line-number information for device code.

The easiest way to enable the compilation of Warp kernels in debug mode is to set::

    wp.config.mode = "debug"

As an alternative to the previous global setting,
debug mode can be turned on in a per-module basis by setting

.. code-block:: python

    wp.set_module_options({"mode": "debug"})

Assertions
----------

``assert`` statements can be inserted into Warp kernels and user-defined functions to interrupt the program
execution when a provided Boolean expression evaluates to false. Assertions are only active for a module's kernels
when the module is compiled in debug mode.

The following example will raise an assertion when the kernel is run since the module is compiled
in debug mode and the ``assert`` statement expects that the array passed into the ``expect_ones`` kernel
is an array of ones, but we passed it a single-element array of zeros:

.. code-block:: python

    import warp as wp

    wp.config.mode = "debug"


    @wp.kernel
    def expect_ones(a: wp.array[int]):
        i = wp.tid()

        assert a[i] == 1, "Array element must be 1"


    input_array = wp.zeros(1, dtype=int)

    wp.launch(expect_ones, input_array.shape, inputs=[input_array])

    wp.synchronize_device()

The output of the program will include a line like the following statement::

    default_program:49: void expect_ones_133f9859_cuda_kernel_forward(wp::launch_bounds_t, wp::array_t<int>): block: [0,0,0], thread: [0,0,0] Assertion `("assert a[i] == 1, \"Array element must be 1\"",var_3)` failed.

Step-Through Debugging
----------------------

It is possible to attach IDE debuggers such as Visual Studio to Warp processes to step through generated kernel code.
Users should first compile the kernels in debug mode by setting::

    wp.config.mode = "debug"

This setting ensures that line numbers, and debug symbols are generated correctly. After launching the Python process,
the debugger should be attached, and a breakpoint inserted into the generated code.

.. note:: Generated kernel code is not a 1:1 correspondence with the original Python code, but individual operations can still be replayed and variables inspected.

Also see :github:`warp/tests/walkthrough_debug.py` for an example of how to debug Warp kernel code running on the CPU.

Breakpoints can also be inserted into Warp kernels running on GPU devices on Linux systems by using the
:func:`wp.breakpoint() <breakpoint>` function and `CUDA-GDB <https://docs.nvidia.com/cuda/cuda-gdb/index.html>`__
or the `NVIDIA Nsight Visual Studio Code Edition (VSCE) <https://developer.nvidia.com/nsight-visual-studio-code-edition>`__
extension.

An example `launch configuration <https://code.visualstudio.com/docs/debugtest/debugging#_launch-configurations>`__
for Visual Studio Code is shown below:

.. code-block:: json

    {
        "version": "0.2.0",
        "configurations": [
            {
                "name": "CUDA-GDB + Python: Launch",
                "type": "cuda-gdb",
                "request": "launch",
                "program": "${command:python.interpreterPath}",
                "args": ["${file}"]
            }
        ]
    }


Generated Code
--------------

Occasionally, it can be useful to inspect the generated code for debugging or profiling.
The generated code for kernels is stored in a central cache location in the user's home directory by default.
The cache location is printed at startup when :func:`wp.init() <warp.init>` is called, for example:

.. code-block:: text

    Warp 0.8.1 initialized:
        CUDA Toolkit: 11.8, Driver: 11.8
        Devices:
        "cpu"    | AMD64 Family 25 Model 33 Stepping 0, AuthenticAMD
        "cuda:0" | NVIDIA GeForce RTX 3090 (sm_86)
        "cuda:1" | NVIDIA GeForce RTX 2080 Ti (sm_75)
        Kernel cache: C:\Users\LukasW\AppData\Local\NVIDIA Corporation\warp\Cache\0.8.1

The kernel cache has folders beginning with ``wp_`` that contain the generated C++/CUDA code and the compiled binaries
for each module that was compiled at runtime.
The name of each folder ends with a hexadecimal hash constructed from the module contents to avoid potential
conflicts when using multiple processes and to support the caching of runtime-defined kernels.

If a bug with Warp's kernel caching logic is suspected, kernel caching can be disabled by setting::

    wp.config.cache_kernels = False

CUDA Error Verification
-----------------------

It is possible to generate out-of-bounds memory access violations through poorly formed kernel code or inputs. In this
case, the CUDA runtime will detect the violation and put the CUDA context into an error state. Subsequent kernel launches
may silently fail, which can lead to hard-to-diagnose issues.

If a CUDA error is suspected, a simple verification method is to enable::

    wp.config.verify_cuda = True

This setting will check the CUDA context after every :func:`wp.launch() <warp.launch>` to ensure that it is still valid.
If an error is encountered, an exception will be raised that often helps to narrow down the problematic kernel.

CUDA error verification cannot be used while a CUDA graph is being captured.

.. note:: Verifying CUDA state at each launch requires synchronizing CPU and GPU which has a significant overhead. Users should ensure this setting is only used during debugging.

Detecting Non-Finite Values
---------------------------

``wp.config.verify_fp = True`` can be helpful in identifying where a calculation
is producing non-finite values like NaN or infinity.
When this flag is used on its own, messages will be printed to the standard
output stream indicating the function that is detecting invalid values.

If combined with :ref:`debug-mode`, an assertion will be raised when an invalid value is detected.

CUDA Toolkit Debugging Tools
----------------------------

`Compute Sanitizer <https://developer.nvidia.com/compute-sanitizer>`__ tools like *initcheck* and *memcheck* can also
be used to detect subtle memory-access issues in Warp applications, e.g.

.. code-block:: text

    compute-sanitizer --tool initcheck python sim.py

The Compute Sanitizer suite is available through the `CUDA Toolkit <https://developer.nvidia.com/cuda-toolkit>`__.

CPU Memory Error Detection with AddressSanitizer
------------------------------------------------

`AddressSanitizer <https://clang.llvm.org/docs/AddressSanitizer.html>`__ (ASan) can detect
out-of-bounds accesses, use-after-free, and similar memory errors in JIT-compiled CPU kernels.
Build Warp's native libraries with the sanitizer enabled:

.. code-block:: sh

    python build_lib.py --sanitize=address

When ``warp-clang`` is built this way, Warp automatically instruments CPU kernels with
``-fsanitize=address`` and resolves their sanitizer callbacks against the host's single
in-process ASan runtime. An out-of-bounds access into a :class:`wp.array <warp.array>` is then
reported as a ``heap-buffer-overflow``, including the allocation site.

The ASan runtime must be initialized before Warp's libraries load, so set the environment
**before** ``import warp``:

- **Linux**: preload the ASan runtime so it initializes first and its symbols are globally
  visible to the JIT:

  .. code-block:: sh

      LD_PRELOAD=$(gcc -print-file-name=libasan.so) ASAN_OPTIONS=verify_asan_link_order=0 python sim.py

- **Windows**: ensure ``clang_rt.asan_dynamic-x86_64.dll`` (shipped with the Visual Studio
  toolchain) is on ``PATH``.

- **macOS**: usually works via ``@rpath`` to the Clang ASan runtime shipped with Xcode.

.. note:: Run kernels in release mode when hunting out-of-bounds array accesses with ASan.
   In :ref:`debug-mode`, Warp's own ``assert``-based bounds check aborts first; ASan
   instrumentation is applied regardless of mode. Global-buffer-overflow on a kernel's own
   static variables is not detected, because the JIT does not run kernel module constructors.
